Fixed greedy overflow values for root elements.

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,8 +23,6 @@ html, body, #react-root {
 	font-family: "PT Sans", sans-serif;
 	font-size: 16px;
 	
-	overflow: hidden;
-	
 }
 
 #react-root {
